Fix quote bar and card color on dark mode.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -32,7 +32,7 @@ $white-color: #fff !default;
 $white-color-darkmode: #0d0f13 !default;
 
 $grey-color: #F7F7F7 !default;
-$grey-color-darkmode: #14161c !default;
+$grey-color-darkmode: #1C1E27 !default;
 
 $grey-dark-color: #555555 !default;
 $grey-dark-color-darkmode: #aaaaaa !default;
