--- a/_sass/theme/_dark-mode.scss
+++ b/_sass/theme/_dark-mode.scss
@@ -2,7 +2,7 @@
   .quote-bar {
     border: 2px solid $black-color-darkmode;
 
-    p {
+    a {
       color: $black-color-darkmode;
     }
   }
